Share task text with carrot template engine. #372 (#402)
* Share task text with carrot template engine. #372

* Update to latest carrot and androidcarrot, remove related TODOs.

* Remove proguard entry for carrot, there are no more warnings.

--- a/opentasks/build.gradle
+++ b/opentasks/build.gradle
@@ -37,6 +37,10 @@ android {
     lintOptions {
         disable 'MissingTranslation' // TODO
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
 }
 
 dependencies {
@@ -49,5 +53,11 @@ dependencies {
     compile project(':opentasks-provider')
     compile 'com.google.android.apps.dashclock:dashclock-api:2.0.0'
     compile 'com.github.dmfs:color-picker:1.0'
+    compile 'au.com.codeka:carrot:2.4.0'
+    compile('com.github.dmfs.androidcarrot:androidcarrot:5a4baa0222') {
+        exclude module: 'carrot'
+        exclude group: 'com.android.support'
+    }
+
     testCompile 'junit:junit:4.12'
 }
