--- a/opentasks/src/main/res/raw/sharetask.template
+++ b/opentasks/src/main/res/raw/sharetask.template
@@ -3,7 +3,7 @@
 {% if $task.description %}
 {{ $task.description }}
 {% end %}{% if $task.checklist %}{% for item in $task.checklist %}
-[{% if item.checked %}X{% else %} {% end %}] {{ item.text }}{% end %}
+[{{ item.checked and "X" or " " }}]{{ item.text }}{% end %}
 {% end %}{% if $task.location %}
 {{ $R.string.task_location}}: {{ $task.location }}{% end %}{% if $task.start %}
 {{ $R.string.task_start}}: {{ tformat.apply($task.start) }}{% end %}{% if $task.due %}
